# NOTE:
# 1. for display continuity sake please use 2 spaces instead of tabs
# 2. make sure that lines break at 80 chars for constricted display situations
#<-------------------------------- 80 chars ---------------------------------->#

2018-12-01 Giuseppe Aruta.
   * Added a standard icon from Kosmo Saig to RasterLegendPlugIn, 
     WMSLegendPlugIn and (Layer) LegendPlugIn 

2018-11-30 Giuseppe Aruta.
  * Added SaveStylePlugin that allows to save OpenJUMP Style either to SLD file
    or to JUMP XML layer style file <filename.style.xml>. 
    Deactivated "Export style to SLD"
  * Added LoadStylePlugin that allows to load SLD file or JUMP XML layer
    style file as OpenJUMP style.
    Deactivated "Import style from SLD"

2018-11-11 Giuseppe Aruta.
  * Moved LegendPlugIn to Layer>Style and Layer tree>Style menu. 
    Deactivated SaveLegendPlugIn

2018-11-09 Giuseppe Aruta.
  * Added text editor component, to modify  a String in a Text component
  * Added LegendPlugin to display a legend of symbols adopted into the view 

2018-10-12 Nicolas Ribot
  * New mechanism for SpatialDatabasesDSMetadata to get information about
    spatial tables: done in one query, to reduce the number of queries
    sent to the backend (took several minutes on big DB)

2018-10-08
  * Small fix in Topology extension (Adjust Polygon Boundaries)

2018-10-04 Giuseppe Aruta.
  * Updated OpenKLEM to ver. 20181010:
    Moved Slope, Aspect, Hillshade plugin to Geomorphometry menu

2018-10-04 Giuseppe Aruta.
  * Updated OpenKLEM to ver. 20181004:
    a) Homologated HillShade to ESRI standard
    b) Histogram. Correct bug.

2018-09-25 ede
  * reenable macOS menu integration for java9+, added Preferences item
  * upgrade apache commons codec, compress, io, lang3 to latest
  * comment unused javax.xml.bind package call, added commented alternatives
  * upgrade xz to latest

2018-08-28 Giuseppe Aruta
  * Added OpenKLEM extension for topographic and Hydrological analysis

2018-08-28 Giuseppe Aruta